second change, before showing the boys

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Gym trainer | Template </title>
+    <title>The FLAME Fitness Club</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logoff.png">
 
     <!-- CSS here -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -192,12 +192,19 @@
     <div class="gallery-area section-padding30 ">
         <div class="container-fluid ">
             <div class="row">
+                <div class="col-xl-12">
+                    <div class="section-tittle text-center mb-55 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s">
+                        <h2 >Events</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery1.png);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/hold.jpg);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <h3>Muscle gaining </h3>
+                                <h3>🤫</h3>
                                 <a href="gallery.html"><i class="ti-plus"></i></a>
                             </div>
                         </div>
@@ -205,10 +212,10 @@
                 </div>
                 <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery2.png);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/hold.jpg);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <h3>Muscle gaining </h3>
+                                <h3>🤫</h3>
                                 <a href="gallery.html"><i class="ti-plus"></i></a>
                             </div>
                         </div>
@@ -216,10 +223,10 @@
                 </div>
                 <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery3.png);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/hold.jpg);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <h3>Muscle gaining </h3>
+                                <h3>🤫</h3>
                                 <a href="gallery.html"><i class="ti-plus"></i></a>
                             </div>
                         </div>
@@ -227,10 +234,10 @@
                 </div>
                 <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery4.png);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/hold.jpg);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <h3>Muscle gaining </h3>
+                                <h3>🤫</h3>
                                 <a href="gallery.html"><i class="ti-plus"></i></a>
                             </div>
                         </div>
@@ -238,10 +245,10 @@
                 </div>
                 <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery5.png);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/hold.jpg);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <h3>Muscle gaining </h3>
+                                <h3>🤫</h3>
                                 <a href="gallery.html"><i class="ti-plus"></i></a>
                             </div>
                         </div>
@@ -249,10 +256,10 @@
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery6.png);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/hold.jpg);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <h3>Muscle gaining </h3>
+                                <h3>🤫</h3>
                                 <a href="gallery.html"><i class="ti-plus"></i></a>
                             </div>
                         </div>
@@ -508,15 +515,7 @@
     </section>
     <!-- Blog Area End -->
     <!--? video_start -->
-    <div class="video-area section-bg2 d-flex align-items-center"  data-background="assets/img/gallery/video-bg.png">
-        <div class="container">
-            <div class="video-wrap position-relative">
-                <div class="video-icon" >
-                    <a class="popup-video btn-icon" href="https://www.youtube.com/watch?v=up68UAfH0d0"><i class="fas fa-play"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
+
     <!-- video_end -->
     <!-- ? services-area -->
     <section class="services-area">
@@ -572,7 +571,7 @@
                         <div class="single-footer-caption mb-50 text-center">
                             <!-- logo -->
                             <div class="footer-logo wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
-                                <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                <a href="index.html"><img src="assets/img/logoff.png" alt=""></a>
                             </div>
                             <!-- Menu -->
                             <!-- Header Start -->
