sammeta push, so close yet so far

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <nav>
                                 <ul id="navigation">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="about.html">About</a></li>
+                                    <li><a href="about.html">Our Trainers</a></li>
                                     <li><a href="courses.html">Courses</a></li>
                                     <li><a href="pricing.html">Pricing</a></li>
                                     <li><a href="gallery.html">Gallery</a></li>
@@ -114,7 +114,7 @@
                             <img src="assets/img/gallery/cat1.png" alt="">
                             <div class="topic-content-box">
                                 <div class="topic-content">
-                                    <h3>Personal traning</h3>
+                                    <h3>Gym Buddy</h3>
                                     <p>You’ll look at graphs and charts in Task One, how to approach the task and <br> the language needed for a successful answer.</p>
                                     <a href="courses.html" class="border-btn">View Courses</a>
                                 </div>
@@ -201,10 +201,10 @@
             <div class="row">
                 <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/hold.jpg);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery1.jpeg);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <h3>🤫</h3>
+                                <h3>Club Fair</h3>
                                 <a href="gallery.html"><i class="ti-plus"></i></a>
                             </div>
                         </div>
@@ -256,10 +256,10 @@
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/hold.jpg);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery2.jpeg);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <h3>🤫</h3>
+                                <h3>Arm Wrestling Party</h3>
                                 <a href="gallery.html"><i class="ti-plus"></i></a>
                             </div>
                         </div>
