third commit bruhhh

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <div class="hero__caption">
                                 <span data-animation="fadeInLeft" data-delay="0.1s">The FLAME</span>
                                 <h1 data-animation="fadeInLeft" data-delay="0.4s">Fitness Club</h1>
-                                <a href="courses.html" class="border-btn hero-btn" data-animation="fadeInLeft" data-delay="0.8s">Learn More</a>
+                                <a href="" class="border-btn hero-btn" data-animation="fadeInLeft" data-delay="0.8s">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                                 <div class="topic-content">
                                     <h3>Gym Buddy</h3>
                                     <p>You’ll look at graphs and charts in Task One, how to approach the task and <br> the language needed for a successful answer.</p>
-                                    <a href="courses.html" class="border-btn">View Courses</a>
+                                    <a href="" class="border-btn">View Courses</a>
                                 </div>
                             </div>
                         </div>
@@ -121,7 +121,7 @@
                                 <div class="topic-content">
                                     <h3>Group traning</h3>
                                     <p>You’ll look at graphs and charts in Task One, how to approach the task and <br> the language needed for a successful answer.</p>
-                                    <a href="courses.html" class="btn">View Courses</a>
+                                    <a href="" class="btn">View Courses</a>
                                 </div>
                             </div>
                         </div>
@@ -160,7 +160,7 @@
                         </div>
                         <div class="cat-cap">
                             <h5><a href="">Coach</a></h5>
-                            <p>Vaishali</p>
+                            <p>Vaishali Bhoras</p>
                         </div>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                             <img src="assets/img/gallery/team3.png" height="500" width="350" alt="">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="services.html">Coach</a></h5>
+                            <h5><a href="">Coach</a></h5>
                             <p>Bhushan</p>
                         </div>
                     </div>
@@ -196,7 +196,7 @@
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>Club Fair</h3>
-                                <a href="gallery.html"><i class="ti-plus"></i></a>
+                                <a href=""><i class="ti-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -207,7 +207,7 @@
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>🤫</h3>
-                                <a href="gallery.html"><i class="ti-plus"></i></a>
+                                <a href=""><i class="ti-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>🤫</h3>
-                                <a href="gallery.html"><i class="ti-plus"></i></a>
+                                <a href=""><i class="ti-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -229,7 +229,7 @@
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>🤫</h3>
-                                <a href="gallery.html"><i class="ti-plus"></i></a>
+                                <a href=""><i class="ti-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -240,7 +240,7 @@
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>🤫</h3>
-                                <a href="gallery.html"><i class="ti-plus"></i></a>
+                                <a href=""><i class="ti-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -251,7 +251,7 @@
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>Arm Wrestling Party</h3>
-                                <a href="gallery.html"><i class="ti-plus"></i></a>
+                                <a href=""><i class="ti-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -261,7 +261,7 @@
     </div>
     <!-- Gallery Area End -->
     <!-- Courses area start -->
-    <section class="pricing-area section-padding40 fix">
+    <section class="pricing-area fix">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
@@ -270,42 +270,20 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
+            <div class="row justify-content-center align-items-center">
+                <div class="col d-flex justify-content-center">
                     <img src="assets/img/gallery/gymhours1.jpg" height="500" width="500">
-                </div>                
-                <div class="col">
+                </div>
+                <div class="col d-flex justify-content-center">
                     <img src="assets/img/gallery/gymhours2.jpg" height="500" width="500">
-                </div>  
+                </div>
             </div>
         </div>
+        
     </section>
     <!-- Courses area End -->
     <!--? About Area-2 Start -->
-    <section class="about-area2 fix pb-padding pt-50 pb-80">
-        <div class="support-wrapper align-items-center">
-            <div class="right-content2">
-                <!-- img -->
-                <div class="right-img wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s">
-                    <img src="assets/img/gallery/about.png" alt="">
-                </div>
-            </div>
-            <div class="left-content2">
-                <!-- section tittle -->
-                <div class="section-tittle2 mb-20 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                    <div class="front-text">
-                        <h2 class="">About Me</h2>
-                        <p>You’ll look at graphs and charts in Task One, how to approach the task and the language needed 
-                            for a successful answer. You’ll examine Task Two questions and learn how to plan, write and 
-                        check academic essays.</p>
-                        <p class="mb-40">Task One, how to approach the task and the language needed for a successful answer. You’ll 
-                        examine Task Two questions and learn how to plan, write and check academic essays.</p>
-                        <a href="courses.html" class="border-btn">My Courses</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
     <!-- About Area End -->
     <!--? Blog Area Start -->
     <section class="home-blog-area pt-10 pb-50">
@@ -314,7 +292,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-7 col-md-9 col-sm-10">
                     <div class="section-tittle text-center mb-100 wow fadeInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                        <h2>From Blog</h2>
+                        <h4>The Executive Committee</h4>
                     </div>
                 </div>
             </div>
@@ -323,11 +301,11 @@
                     <div class="home-blog-single mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                         <div class="blog-img-cap">
                             <div class="blog-img">
-                                <img src="assets/img/gallery/blog1.png" alt="">
+                                <img src="assets/img/gallery/president.png" alt="">
                             </div>
                             <div class="blog-cap">
-                                <span>Gym & Fitness</span>
-                                <h3><a href="blog_details.html">Your Antibiotic One Day To 10 Day Options</a></h3>
+                                <span>Sammeta Kini</span>
+                                <h3><a href="">President</a></h3>
                             </div>
                         </div>
                     </div>
@@ -336,11 +314,11 @@
                     <div class="home-blog-single mb-30 wow fadeInUp" data-wow-duration="2s" data-wow-delay=".6s">
                         <div class="blog-img-cap">
                             <div class="blog-img">
-                                <img src="assets/img/gallery/blog2.png" alt="">
+                                <img src="assets/img/gallery/vpresident.png" alt="">
                             </div>
                             <div class="blog-cap">
-                                <span>Gym & Fitness</span>
-                                <h3><a href="blog_details.html">Your Antibiotic One Day To 10 Day Options</a></h3>
+                                <span>Abhimanyu Chaudary</span>
+                                <h3><a href="">Vice President</a></h3>
                             </div>
                         </div>
                     </div>
