--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
                 <div class="col-xl-6 col-lg-6">
                     <div class="single-topic text-center mb-30">
                         <div class="topic-img">
-                            <img src="assets/img/gallery/cat1.png" alt="">
+                            <img src="assets/img/gallery/cat.png" alt="">
                             <div class="topic-content-box">
                                 <div class="topic-content">
                                     <h3>Gym Buddy</h3>
-                                    <p>You’ll look at graphs and charts in Task One, how to approach the task and <br> the language needed for a successful answer.</p>
-                                    <a href="" class="border-btn">View Courses</a>
+                                    <p>THe Fitness Club's Initiative to help beginners learn the basics of going to the gym.</p>
+                                    <a href="" class="border-btn">Learn More</a>
                                 </div>
                             </div>
                         </div>
@@ -116,12 +116,12 @@
                 <div class="col-xl-6 col-lg-6">
                     <div class="single-topic text-center mb-30">
                         <div class="topic-img">
-                            <img src="assets/img/gallery/cat2.png" alt="">
+                            <img src="assets/img/gallery/cat.png" alt="">
                             <div class="topic-content-box">
                                 <div class="topic-content">
-                                    <h3>Group traning</h3>
-                                    <p>You’ll look at graphs and charts in Task One, how to approach the task and <br> the language needed for a successful answer.</p>
-                                    <a href="" class="btn">View Courses</a>
+                                    <h3>The FLAME Fitness Club Instagram</h3>
+                                    <p>Follow us for daily updates.</p>
+                                    <a href="https://www.instagram.com/flamefitnessclub/" class="btn">Take me There!</a>
                                 </div>
                             </div>
                         </div>
@@ -304,7 +304,7 @@
                                 <img src="assets/img/gallery/president.png" alt="">
                             </div>
                             <div class="blog-cap">
-                                <span>Sammeta Kini</span>
+                                <span>Sammet</span>
                                 <h3><a href="">President</a></h3>
                             </div>
                         </div>
@@ -324,6 +324,50 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-6">
+                    <div class="home-blog-single mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
+                        <div class="blog-img-cap">
+                            <div class="blog-img">
+                                <img src="assets/img/gallery/sec.png" alt="">
+                            </div>
+                            <div class="blog-cap">
+                                <span>Manu Hrishriraj</span>
+                                <h3><a href="">Secretary</a></h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-6">
+                    <div class="home-blog-single mb-30 wow fadeInUp" data-wow-duration="2s" data-wow-delay=".6s">
+                        <div class="blog-img-cap">
+                            <div class="blog-img">
+                                <img src="assets/img/gallery/tres.png" alt="">
+                            </div>
+                            <div class="blog-cap">
+                                <span>Shriyaa Gandhi</span>
+                                <h3><a href="">Treasurer</a></h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-6">
+                    <div class="home-blog-single mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
+                        <div class="blog-img-cap">
+                            <div class="blog-img">
+                                <img src="assets/img/gallery/pr.png" alt="">
+                            </div>
+                            <div class="blog-cap">
+                                <span>Sancia Paul</span>
+                                <h3><a href="">Public Relations Head</a></h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
         </div>
     </section>
     <!-- Blog Area End -->
@@ -334,41 +378,18 @@
     <section class="services-area">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-8">
+                <div class="col">
                     <div class="single-services mb-40 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s">
                         <div class="features-icon">
                             <img src="assets/img/icon/icon1.svg" alt="">
                         </div>
                         <div class="features-caption">
                             <h3>Location</h3>
-                            <p>You’ll look at graphs and charts in Task One, how to approach </p>
+                            <p>The FLAME Gym, Arjuna</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-8">
-                    <div class="single-services mb-40 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
-                        <div class="features-icon">
-                            <img src="assets/img/icon/icon2.svg" alt="">
-                        </div>
-                        <div class="features-caption">
-                            <h3>Phone</h3>
-                            <p>(90) 277 278 2566</p>
-                            <p>  (78) 267 256 2578</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-8">
-                    <div class="single-services mb-40 wow fadeInUp" data-wow-duration="2s" data-wow-delay=".4s">
-                        <div class="features-icon">
-                            <img src="assets/img/icon/icon3.svg" alt="">
-                        </div>
-                        <div class="features-caption">
-                            <h3>Email</h3>
-                            <p>jacson767@gmail.com</p>
-                            <p>contact56@zacsion.com</p>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </section>
