who know what changed bro

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                                 <img src="assets/img/gallery/president.png" alt="">
                             </div>
                             <div class="blog-cap">
-                                <span>Sammet</span>
+                                <span>Sammeta Kini</span>
                                 <h3><a href="">President</a></h3>
                             </div>
                         </div>
