--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                     <div class="home-blog-single mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                         <div class="blog-img-cap">
                             <div class="blog-img">
-                                <img src="assets/img/gallery/president.png" alt="">
+                                <img ondblclick="myFunction()" src="assets/img/gallery/president.png" alt="">
                             </div>
                             <div class="blog-cap">
                                 <span>Sammeta Kini</span>
@@ -474,6 +474,11 @@
 <!-- Jquery Plugins, main Jquery -->	
 <script src="./assets/js/plugins.js"></script>
 <script src="./assets/js/main.js"></script>
+<script>
+    function myFunction() {
+        window.location.replace("https://www.youtube.com/watch?v=rcVb6l4TpHw");
+    }
+    </script>
 
 </body>
 </html>
