we no funny no more

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                     <div class="home-blog-single mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                         <div class="blog-img-cap">
                             <div class="blog-img">
-                                <img ondblclick="myFunction()" src="assets/img/gallery/president.png" alt="">
+                                <img src="assets/img/gallery/president.png" alt="">
                             </div>
                             <div class="blog-cap">
                                 <span>Sammeta Kini</span>
