--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
                                 <div class="topic-content">
                                     <h3>Gym Buddy</h3>
                                     <p>THe Fitness Club's Initiative to help beginners learn the basics of going to the gym.</p>
-                                    <a href="" class="border-btn">Learn More</a>
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeIBIsvK8tPxoAdmHbYoAfmkr9NiYbarkHeQONwRojIkeWXzw/viewform?usp=sf_link" class="border-btn">Become A Gym Buddy Volunteer</a><br><br>
+                                    <a href="#" class="border-btn">Get A Gym Buddy's Help</a>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -167,7 +169,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/team3.png" height="500" width="350" alt="">
+                            <img src="assets/img/gallery/cat.png" height="500" width="350" alt="">
                         </div>
                         <div class="cat-cap">
                             <h5><a href="">Coach</a></h5>
@@ -201,7 +203,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
+                <!-- <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
                         <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/hold.jpg);"></div>
                         <div class="overlay">
@@ -222,8 +224,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
+                </div> -->
+                <!-- <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
                         <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/hold.jpg);"></div>
                         <div class="overlay">
@@ -233,8 +235,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
+                </div> -->
+                <!-- <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
                         <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/hold.jpg);"></div>
                         <div class="overlay">
@@ -244,7 +246,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
                         <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery2.jpeg);"></div>
@@ -317,7 +319,7 @@
                                 <img src="assets/img/gallery/vpresident.png" alt="">
                             </div>
                             <div class="blog-cap">
-                                <span>Abhimanyu Chaudary</span>
+                                <span>Abhimanyu Chaudhary</span>
                                 <h3><a href="">Vice President</a></h3>
                             </div>
                         </div>
