--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 </div> -->
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery2.jpeg);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery2.png);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>Arm Wrestling Party</h3>
