--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
                                 <div class="topic-content">
                                     <h3>Gym Buddy</h3>
                                     <p>THe Fitness Club's Initiative to help beginners learn the basics of going to the gym.</p>
-                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeIBIsvK8tPxoAdmHbYoAfmkr9NiYbarkHeQONwRojIkeWXzw/viewform?usp=sf_link" class="border-btn">Become A Gym Buddy Volunteer</a><br><br>
-                                    <a href="#" class="border-btn">Get A Gym Buddy's Help</a>
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScIbTmszjpzeuSPdEw-uFZkJWccT4Ay9S__T1R1srI0TgokkA/viewform" class="border-btn">Get A Gym Buddy's Help</a>
                                     
                                 </div>
                             </div>
