adding umesh sir

--- a/index.html
+++ b/index.html
@@ -367,6 +367,19 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-xl-6 col-lg-6 col-md-6">
+                    <div class="home-blog-single mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
+                        <div class="blog-img-cap">
+                            <div class="blog-img">
+                                <img src="assets/img/gallery/fa.png" alt="">
+                            </div>
+                            <div class="blog-cap">
+                                <span>Coach Umesh Deshmukh</span>
+                                <h3><a href="">Faculty Advisor</a></h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 
             </div>
         </div>
