adding past events

--- a/index.html
+++ b/index.html
@@ -384,6 +384,109 @@
             </div>
         </div>
     </section>
+
+
+
+    <section class="about-area2 fix pb-padding pt-50 pb-80">
+        <div class="row justify-content-center">
+            <div class="col-lg-7 col-md-9 col-sm-10">
+                <div class="section-tittle text-center mb-100 wow fadeInUp" data-wow-duration="2s" data-wow-delay=".2s">
+                    <h4>Past Events</h4>
+                </div>
+            </div>
+        </div>
+        <div class="support-wrapper align-items-center">
+            <div class="right-content2 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s" >
+                <!-- img -->
+                <div class="right-img">
+                    <img src="assets/img/gallery/past_club_intro.jpg" alt="">
+                </div>
+            </div>
+            <div class="left-content2">
+                <!-- section tittle -->
+                <div class="section-tittle2 mb-20 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                    <div class="front-text">
+                        <h2 class="">Club Internal Mixer</h2>
+                        <a href="#" class="border-btn">2023-2024</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br><br>
+        <div class="support-wrapper align-items-center">
+            <div class="right-content2 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s" >
+                <!-- img -->
+                <div class="section-tittle2 mb-20 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                    <div class="front-text">
+                        <h2 class="">Fitquest</h2>
+                        <a href="#" class="border-btn">2023-2024</a>
+                    </div>
+                </div>
+            </div>
+            <div class="left-content2">
+                <div class="right-img">
+                    <img  style="width: 100%;" src="assets/img/gallery/past_fitquest.jpg" alt="">
+                </div>
+                <!-- section tittle -->
+               
+            </div>
+        </div>
+        <br><br>
+        <div class="support-wrapper align-items-center">
+            <div class="right-content2 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s" >
+                <!-- img -->
+                <div class="right-img">
+                    <img src="assets/img/gallery/past_showdown.png" alt="">
+                </div>
+            </div>
+            <div class="left-content2">
+                <!-- section tittle -->
+                <div class="section-tittle2 mb-20 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                    <div class="front-text">
+                        <h2 class="">Fitness Showdown</h2>
+                        <a href="#" class="border-btn">2023-2024</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br><br>
+        <div class="support-wrapper align-items-center">
+            <div class="right-content2 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s" >
+                <!-- img -->
+                <div class="section-tittle2 mb-20 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                    <div class="front-text">
+                        <h2 class="">FLAME Mr & Ms Kurukshetra</h2>
+                        <a href="#" class="border-btn">2023-2024</a>
+                    </div>
+                </div>
+            </div>
+            <div class="left-content2">
+                <div class="right-img">
+                    <img  style="width: 100%;" src="assets/img/gallery/past_kuru.jpg" alt="">
+                </div>
+                <!-- section tittle -->
+               
+            </div>
+        </div>
+        <br><br>
+        <div class="support-wrapper align-items-center">
+            <div class="right-content2 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s" >
+                <!-- img -->
+                <div class="right-img">
+                    <img src="assets/img/gallery/past_arm_wrestling.jpg" alt="">
+                </div>
+            </div>
+            <div class="left-content2">
+                <!-- section tittle -->
+                <div class="section-tittle2 mb-20 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                    <div class="front-text">
+                        <h2 class="">Arm Wrestling Party</h2>
+                        <a href="#" class="border-btn">2023-2024</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Blog Area End -->
     <!--? video_start -->
 
