adding past events

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="#trainers">Our Trainers</a></li>
                                     <li><a href="#events">Events</a></li>
-                                
+                                    <li><a href="#past_events">Past Year's Events</a></li>
                                 </ul>
                             </nav>
                         </div>          
@@ -387,7 +387,7 @@
 
 
 
-    <section class="about-area2 fix pb-padding pt-50 pb-80">
+    <section id="past_events" class="about-area2 fix pb-padding pt-50 pb-80">
         <div class="row justify-content-center">
             <div class="col-lg-7 col-md-9 col-sm-10">
                 <div class="section-tittle text-center mb-100 wow fadeInUp" data-wow-duration="2s" data-wow-delay=".2s">
