changes before showing

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                             <div class="topic-content-box">
                                 <div class="topic-content">
                                     <h3>Gym Buddy</h3>
-                                    <p>THe Fitness Club's Initiative to help beginners learn the basics of going to the gym.</p>
-                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScIbTmszjpzeuSPdEw-uFZkJWccT4Ay9S__T1R1srI0TgokkA/viewform" class="border-btn">Get A Gym Buddy's Help</a>
+                                    <p>The Fitness Club's Initiative to help beginners learn the basics of going to the gym.</p>
+                                    <a href="" class="border-btn">*Closed*</a>
                                     
                                 </div>
                             </div>
@@ -202,12 +202,24 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
+            
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/hold.jpg);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gal3.png);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <h3>🤫</h3>
+                                <h3>Interhouse Fitness</h3>
+                                <a href=""><i class="ti-plus"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                    <div class="box snake mb-30">
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery2.png);"></div>
+                        <div class="overlay">
+                            <div class="overlay-content">
+                                <h3>Arm Wrestling Party</h3>
                                 <a href=""><i class="ti-plus"></i></a>
                             </div>
                         </div>
@@ -215,43 +227,32 @@
                 </div>
                 <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/hold.jpg);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gal4.png);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <h3>🤫</h3>
+                                <h3>Fitness Masterclass</h3>
                                 <a href=""><i class="ti-plus"></i></a>
                             </div>
                         </div>
                     </div>
-                </div> -->
-                <!-- <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
+                </div>
+                <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/hold.jpg);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gal6.png);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <h3>🤫</h3>
+                                <h3>Tic Tac Tone</h3>
                                 <a href=""><i class="ti-plus"></i></a>
                             </div>
                         </div>
                     </div>
-                </div> -->
-                <!-- <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
-                    <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/hold.jpg);"></div>
-                        <div class="overlay">
-                            <div class="overlay-content">
-                                <h3>🤫</h3>
-                                <a href=""><i class="ti-plus"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
+                </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery2.png);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gal5.jpeg);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <h3>Arm Wrestling Party</h3>
+                                <h3>Run for a cause</h3>
                                 <a href=""><i class="ti-plus"></i></a>
                             </div>
                         </div>
@@ -354,19 +355,6 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-6 col-lg-6 col-md-6">
-                    <div class="home-blog-single mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
-                        <div class="blog-img-cap">
-                            <div class="blog-img">
-                                <img src="assets/img/gallery/pr.png" alt="">
-                            </div>
-                            <div class="blog-cap">
-                                <span>Sancia Paul</span>
-                                <h3><a href="">Public Relations Head</a></h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-xl-6 col-lg-6 col-md-6">
                     <div class="home-blog-single mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                         <div class="blog-img-cap">
